--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
-
     //Common Test
     androidTestImplementation 'androidx.test.ext:junit:' + rootProject.extJUnitVersion;
     androidTestImplementation 'androidx.test:runner:1.1.0'
@@ -44,5 +43,11 @@ dependencies {
     //Intent Test
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
     androidTestImplementation 'androidx.test.ext:truth:1.0.0'
+
+    //IdlingResource
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
+
+    //WebView
+    androidTestImplementation 'androidx.test.espresso:espresso-web:3.1.0'
 
 }
